style: update style of producCard and customerProduct

--- a/front-end/src/Page/styles/customerProduct.css
+++ b/front-end/src/Page/styles/customerProduct.css
@@ -7,9 +7,14 @@
 }
 
 .card_shelf {
-  width: 100%;
+  margin: auto;
+  max-width: 1200px;
   background-color: white;
   padding: 20px;
+  display: flex;
+  gap: 60px;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .tag_shelf {
