--- a/front-end/src/components/styles/productCard.css
+++ b/front-end/src/components/styles/productCard.css
@@ -40,14 +40,17 @@
 
 .product_image_container {
   margin: 0;
+  height: 220px;
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: white;
 }
 
 .product_image {
-  height: 220px;
+  max-height: 220px;
+  max-width: 198px;
   padding: 4px 0;
 }
 
@@ -59,6 +62,7 @@
   justify-content: center;
   align-items: center;
   background-color: #EAF1EF;
+  min-height: 100px;
 }
 
 .product_card_footer div {
@@ -66,7 +70,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 0;  
+  gap: 0;
 }
 
 .product_name {
@@ -76,6 +80,7 @@
   font-family: 'Roboto';
   font-weight: 400;
   font-size: 20px;
+  text-align: center;
   margin: 0;
   color: #001813;
 }
