feat: created de product list compnente , correcte the provider , created sales services

--- a/front-end/src/Page/styles/checkout.css
+++ b/front-end/src/Page/styles/checkout.css
@@ -9,11 +9,90 @@
 }
 
 .quant {
+  margin-left: 15px;
   text-align: center;
-  width: 70px;
+  width: 80px;
 }
 
 .value {
   text-align: center;
-  width: 100px;
+  width: 130px;
+}
+
+.subTotal {
+  text-align: center;
+  width: 120px;
+}
+
+.Remover {
+  text-align: center;
+  width: 150px;
+}
+
+.checkout_TotalValue {
+  background: #036b52;
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  font-size: 25px;
+  height: 70px;
+  justify-content: center;
+  margin-left: 83%;
+  width: 155px;
+}
+
+.box_Pedidos {
+  background-color: whitesmoke;
+  border: 2px 2px 2px 6px solid black;
+  border-radius: 15px;
+  height: 400px;
+  padding: 20px;
+}
+
+.box_Detail {
+  background-color: whitesmoke;
+  border: 2px 2px 2px 6px solid black;
+  border-radius: 15px;
+  height: 120px;
+  padding: 20px;
+}
+
+.box_Detail label {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+
+.inputs_info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.box_Detail select {
+  height: 30px;
+  margin-top: 15px;
+  width: 250px;
+}
+
+.box_Detail input {
+  padding-right: 20px;
+}
+
+.formNumber {
+  width: 30px;
+}
+
+.formAdress {
+  width: 500px;
+}
+
+.submitOrder {
+  background-color: #036b52;
+  border-radius: 8px;
+  color: white;
+  font-size: 20px;
+  height: 50px;
+  margin-left: 40%;
+  margin-top: 10px;
+  width: 230px;
 }
