--- a/front-end/src/components/styles/productCard.css
+++ b/front-end/src/components/styles/productCard.css
@@ -116,9 +116,12 @@
 
 .product_quantity {
   margin: 0;
-  height: 28px;
-  width: 50px;
+  height: 18px;
+  width: 30px;
   background: #FFFFFF;
-  border: 1px solid #001813;
+  /* #001813 */
+  border: 1px solid white; 
   border-radius: 0px;
+  text-align: center;
+  box-shadow: none;
 }
