--- a/front-end/src/components/styles/totalTag.css
+++ b/front-end/src/components/styles/totalTag.css
@@ -1,13 +1,13 @@
 .total_tag {
+  background-color: #036b52;
   border: 0;
-  min-width: 300px;
-  height: 50px;
+  color: white;
   font-size: 30px;
   font-weight: 600;
-  background-color:  #036B52;;
-  color: white;
-  text-align: center;
+  height: 50px;
+  min-width: 300px;
   padding: 0 10px;
+  text-align: center;
 }
 
 .total_tag:hover {
