--- a/front-end/src/components/styles/orderCard.css
+++ b/front-end/src/components/styles/orderCard.css
@@ -10,10 +10,11 @@
 }
 
 .order_card {
+  block-size: fit-content;
   border: 1px solid #b1c2be;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
-  width: 400px;
+  padding: 3px;
 }
 
 .order_number {
@@ -61,6 +62,7 @@
   flex-grow: 1;
   height: 100px;
   justify-content: center;
+  padding: 0 10px;
 }
 
 .order_status_pendente p {
@@ -83,7 +85,7 @@
   display: block;
   font-size: 20px;
   font-weight: 600;
-  padding: 5px 0;
+  padding: 5px 15px;
   text-align: center;
 }
 
