--- a/front-end/src/components/styles/orderCard.css
+++ b/front-end/src/components/styles/orderCard.css
@@ -57,7 +57,7 @@
 
 .order_status_pendente {
   align-items: center;
-  background-color: #ccb800a7;
+  background-color: rgba(204, 184, 0, 0.75);
   display: flex;
   flex-grow: 1;
   height: 100px;
@@ -65,7 +65,27 @@
   padding: 0 10px;
 }
 
-.order_status_pendente p {
+.order_status_entregue {
+  align-items: center;
+  background-color: rgba(0, 204, 155, 0.75);
+  display: flex;
+  flex-grow: 1;
+  height: 100px;
+  justify-content: center;
+  padding: 0 10px;
+}
+
+.order_status_preparando {
+  align-items: center;
+  background-color: rgba(102, 204, 0, 0.75);
+  display: flex;
+  flex-grow: 1;
+  height: 100px;
+  justify-content: center;
+  padding: 0 10px;
+}
+
+.order_status_pendente p, .order_status_preparando p, .order_status_entregue p {
   display: block;
   font-size: 25px;
   font-weight: 600;
