--- a/front-end/src/Page/styles/checkout.css
+++ b/front-end/src/Page/styles/checkout.css
@@ -2,6 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .table_products {
@@ -9,6 +10,10 @@
   display: flex;
   justify-content: center;
   width: 100vh;
+}
+
+.box_total {
+  width: 100%;
 }
 
 
@@ -67,7 +72,7 @@
   border: 2px 2px 2px 6px solid black;
   border-radius: 15px;
   height: 600px;
-  width: 100vh;
+  width: 100%;
 }
 
 .box_Detail {
